comment alignment fixed

--- a/src/main/resources/static/css/show.css
+++ b/src/main/resources/static/css/show.css
@@ -87,7 +87,7 @@
     border-radius: 10px;
     height: 50px;
     line-height: 50px;
-    margin-top: 475px;
+    /*margin-top: 475px;*/
     color: white;
     text-align: center;
 }
